prevent the control links from wrapping between the icon and the text

--- a/DDDEastAnglia/Areas/Admin/Content/admin.css
+++ b/DDDEastAnglia/Areas/Admin/Content/admin.css
@@ -26,6 +26,10 @@
     text-align: right;
 }
 
+.table td.controls span {
+    white-space: nowrap;
+}
+
 th.barchart, td.barchart {
     width: 50%;
 }
